# igraph

./: .all-contributorsrc  .astylerc  .bzrignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .zenodo.json  ACKNOWLEDGEMENTS.md  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTORS.txt  ChangeLog  DESCRIPTION  Doxyfile  INSTALL  INSTALL.WINDOWS  INSTALL.WINDOWS.md  Makefile  Makefile.am  NAMESPACE  NEWS  NEWS-0.3  NEWS-0.3.3  NEWS-0.4  NEWS-0.5  ONEWS  README  README.md  SUPPORT.md  TODO  VERSIONING.md  appveyor.yml  (+15 more)
doc/: CMakeLists.txt  Makefile.am  adjlist.xxml  arpack.xxml  attributes.xxml  basicigraph.xxml  bibdatabase.xml  bipartite.xxml  bitset.xxml  c-docbook.re  cliques.xxml  coloring.xxml  community.xxml  create-database.sql  cycles.xml  cycles.xxml  devhelp.xsl  docbook.outlang  doxrox.py  dqueue.xxml  embedding.xxml  epi.xxml  error.xxml  fdl.xml  flows.xxml  foreign.xxml  games.xxml  generators.xxml  glossary.md  glossary.xml  gpl.xml  graphlets.xxml  gtk-doc.xsl  heap.xxml  hrg.xxml  igraph-docs.info.diff  igraph-docs.xml  igraph-docs.xxml  igraph-sections.txt  igraph.3  (+41 more)
doc/book/: Makefile.am  attributes.xml  bibliography.xml  centrality.xml  citation.xml  components.xml  creating.xml  datamodel.xml  devhelp.xsl  flows.xml  foreign.xml  graph.xml  gtk-doc.xsl  igraph.xml  import.R  installation.xml  introduction.xml  iterators.xml  motifs.xml  operators.xml  pathlength.xml  plotting.xml  random.xml  reddiameter.fig  short.xml  stars.fig  structures.xml  version-greater-or-equal.xsl
doc/homepage/: bugs.html.in  documentation.html.in  download.html.in  features.html.in  frgraphs.R  generate.py  index.html.in  introduction.html.in  license.html.in  links.html.in  news.html.in  relnotes-0.5.1.html.in  relnotes-0.5.2.html.in  relnotes-0.5.3.html.in  relnotes-0.5.4.html.in  relnotes-0.5.html.in  relnotes-0.6.4.html.in  relnotes-0.6.5.html.in  relnotes-0.6.html.in  requirements.html.in  screenshots.html.in  screenshots2.html.in  style.css  support.html.in  template.html
doc/html/: style.css  toggle.js
doc/licenses/: Licence_CeCILL-B_V1-fr.txt  gpl-2.0.txt
doc/nightly/: create_db.sh  footer.tpl  header.tpl  ijumbo.tpl  main.tpl  navbar.tpl  nightly-test.db  nightly.py  test_data.sh  tests.tpl
interfaces/: CMakeLists.txt  Makefile.am  functions-categories.yaml  functions.def  functions.yaml  types.yaml
interfaces/R/: DESCRIPTION.in  Makefile  Makefile.am  NAMESPACE.in  R1-TODO.txt  README  config.def  configure.in.in  extract_examples.R  runtest.sh  types-C.def  types-R.def
interfaces/java/: Makefile.in  README  build.xml  configure.in  manifest.in  types-C.def  types-Java.def
interfaces/python/: MANIFEST.in  Makefile.am  README  bfsiter.h  common.c  common.h  convert.c  convert.h  edgeobject.c  edgeobject.h  edgeseqobject.c  edgeseqobject.h  error.c  error.h  graphobject.c  graphobject.h  igraphmodule.c  old_test.py  pylint.rc  setup.cfg  setup.py  test.py  test.sh  vertexobject.c  vertexobject.h  vertexseqobject.c  vertexseqobject.h
interfaces/shell/: Makefile.am  interface.c.in  types.def
src/: CHOLMOD.diff  CMakeLists.txt  DensityGrid.cpp  DensityGrid.h  DensityGrid_3d.cpp  DensityGrid_3d.h  Laplace_Centrality_Dynamic.R  Makefile.am  Makefile.in  Makevars  NetDataTypes.cpp  NetDataTypes.h  NetRoutines.cpp  NetRoutines.h  adjlist.c  arpack.c  arpack.h  arpack_internal.h  array.c  array.h  array.pmt  atlas-edges.h  atlas.c  attributes.c  attributes.h  basic_query.c  betweenness.c  bfgs.c  bigint.c  bigint.h  bignum.c  bignum.h  bipartite.c  bisbm_communities.c  blas.c  bliss.cc  bliss_bignum.hh  bliss_defs.hh  bliss_eqrefhash.cc  bliss_eqrefhash.hh  (+272 more)
src/AMD/: Makefile
src/CHOLMOD/: Makefile
src/SuiteSparse_config/: Makefile  SuiteSparse_config.c  SuiteSparse_config.h  SuiteSparse_config.mk  SuiteSparse_config_GPU.mk  SuiteSparse_config_Mac.mk
src/arpack/: dasum.f  daxpy.f  dcopy.f  ddot.f  dgemv.f  dgeqr2.f  dger.f  dgetv0.c  dgetv0.f  dlabad.f  dlacon.f  dlacpy.f  dladiv.f  dlae2.f  dlaev2.f  dlaexc.f  dlahqr.f  dlaln2.f  dlamch.f  dlange.f  dlanhs.f  dlanst.f  dlanv2.f  dlapy2.f  dlaqrb.c  dlaqrb.f  dlarf.f  dlarfg.f  dlarfx.f  dlarnv.f  dlartg.f  dlaruv.f  dlascl.f  dlaset.f  dlasr.f  dlasrt.f  dlassq.f  dlasy2.f  dmout.c  dmout.f  (+64 more)
src/blas/: blas_igraph.f  dasum.c  daxpy.c  dcopy.c  ddot.c  dgemm.c  dgemv.c  dger.c  dnrm2.c  drot.c  dscal.c  dswap.c  dtrmm.c  idamax.c  lsame.c
src/bliss/: CMakeLists.txt  bignum.hh  bliss_heap.cc  defs.cc  defs.hh  graph.cc  graph.hh  heap.cc  heap.hh  kstack.hh  orbit.cc  partition.cc  partition.hh  uintseqhash.hh  utils.cc  utils.hh
src/centrality/: betweenness.c  centrality_internal.h  centrality_other.c  centralization.c  closeness.c  coreness.c  dispersion.c  eigenvector.c  hub_authority.c  pagerank.c  prpack.cpp  prpack_internal.h  subgraph.c  truss.cpp  truss.h
src/cliquer/: CMakeLists.txt  cliquer.c  cliquer.h  cliquer_graph.c  cliquerconf.h  graph.c  graph.h  misc.h  reorder.c  reorder.h  set.h
src/cliques/: cliquer.c  cliquer_internal.h  cliquer_wrapper.c  cliques.c  glet.c  maximal_cliques.c  maximal_cliques_template.h
src/community/: community_internal.h  community_misc.c  community_other.c  edge_betweenness.c  fast_modularity.c  fluid.c  infomap.cc  infomap.cpp  label_propagation.c  leading_eigenvector.c  leiden.c  louvain.c  misc.c  modularity.c  optimal_modularity.c  voronoi.c
src/connectivity/: cohesive_blocks.c  (+4 more)
tests/: CMakeLists.txt  Makefile.am  arpack.at  atlocal.in  attributes.at  basic.at  bipartite.at  centralization.at  cliques.at  coloring.at  community.at  components.at  conversion.at  eigen.at  embedding.at  eulerian.at  flow.at  foreign.at  hrg.at  internal.at  iterators.at  layout.at  matching.at  microscopic.at  motifs.at  mt.at  operators.at  other.at  qsort.at  random.at  scg.at  separators.at  spinglass.at  structural_properties.at  structure_generators.at  temporal.at  testsuite.at  topology.at  types.at  version.at  (+1 more)
wasm/: CMakeLists.txt  bind.cpp
(+4506 files in other folders)
